--- a/WaterFilterMonitorApp/package.json
+++ b/WaterFilterMonitorApp/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
+    "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-picker/picker": "^2.11.0",
-    "@react-navigation/native": "^7.1.6",
-    "@react-navigation/native-stack": "^7.3.10",
+    "@react-navigation/bottom-tabs": "^7.3.13",
+    "@react-navigation/native": "^7.1.9",
+    "@react-navigation/native-stack": "^7.3.13",
     "axios": "^1.9.0",
     "expo": "~52.0.46",
     "expo-linear-gradient": "~14.0.2",
