--- a/WaterFilterMonitorApp/package.json
+++ b/WaterFilterMonitorApp/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
     "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
     "expo": "~52.0.46",
     "expo-linear-gradient": "~14.0.2",
     "expo-status-bar": "~2.0.1",
