--- a/WaterFilterMonitorApp/package.json
+++ b/WaterFilterMonitorApp/package.json
@@ -21,10 +21,13 @@
     "date-fns": "^4.1.0",
     "expo": "~52.0.46",
     "expo-linear-gradient": "~14.0.2",
+    "expo-modules-core": "~2.2.3",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-bluetooth-classic": "^1.73.0-rc.13",
+    "react-native-bluetooth-serial": "^1.0.0-rc1",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gifted-charts": "^1.4.60",
     "react-native-paper": "^5.13.5",
@@ -32,8 +35,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.8.0",
     "react-native-web": "~0.19.13",
-    "recharts": "^2.15.3",
-    "expo-modules-core": "~2.2.3"
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
